# THE-CLAW

./: .gitignore  Cargo.toml  PROFILES.md  README.md  RustSPec.md  bootstrap.bat  bootstrap.sh  claw-1  claw-1.bat  claw-2  claw-2.bat  claw-3  claw-3.bat  claw-4  claw-4.bat  claw-5  claw-5.bat  claw-6  claw-6.bat  claw-7  claw-7.bat  claw-8  claw-8.bat  clientcache.md  clientcli.md  launch.bat  launch.sh  profile-selector  profile-selector.bat  run  run.bat  start.sh  the-claw.desktop
claude-auth-client/: Cargo.toml
claude-auth-client/src/: lib.rs
claude-auth-router/: Cargo.toml
claude-auth-router/src/: config.rs  control_client.rs  handlers.rs  main.rs  models.rs  oauth.rs  store.rs
claude-control-browser/: .gitignore  README.md  package.json
claude-control-browser/src/: config.js  layout.js  main.js  wireguard.js
claude-control-browser/wireguard/: .gitkeep  README.md
