[package]
name = "claude-auth-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
directories = "5.0"
